Signed-off-by: ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/lab_patient_report.xhtml
+++ b/src/main/webapp/lab_patient_report.xhtml
@@ -265,7 +265,7 @@
                             <p:commandButton styleClass="nonPrintBlock"  ajax="false" value="Print" onclick="window.print();" actionListener="#{patientReportController.printPatientReport()}" 
                                              rendered="#{patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission }" />
                         
-                            <p:commandButton styleClass="nonPrintBlock"  ajax="false" value="PDF" onclick="window.print();" actionListener="#{patientReportController.printPatientReport()}" 
+                            <p:commandButton styleClass="nonPrintBlock"  ajax="false" value="PDF" actionListener="#{patientReportController.pdfPatientReport()}" 
                                              rendered="#{patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission }" />
                         </div>
 
