Signed-off-by: ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/clinical/clinical_patient_for_receptionist.xhtml
+++ b/src/main/webapp/clinical/clinical_patient_for_receptionist.xhtml
@@ -222,9 +222,9 @@
                                                         <f:ajax event="keyup" execute="@this" render="calNewPtDob lblPtAge" listener="#{patientController.dateChangeListen()}" />
                                                     </p:inputText>
 
-                                                    <p:watermark value="#{patientController.current.ageYears} years" for="year" ></p:watermark>
+<!--                                                    <p:watermark value="#{patientController.current.ageYears} years" for="year" ></p:watermark>
                                                     <p:watermark value="#{patientController.current.ageMonths} months" for="month" ></p:watermark>
-                                                    <p:watermark value="#{patientController.current.ageDays} days" for="day" ></p:watermark>
+                                                    <p:watermark value="#{patientController.current.ageDays} days" for="day" ></p:watermark>-->
 
                                                 </h:panelGrid>
 
