--- a/src/main/webapp/memberShip/membership_scheme.xhtml
+++ b/src/main/webapp/memberShip/membership_scheme.xhtml
@@ -33,12 +33,12 @@
                                 </h:panelGrid>
                                 <h:panelGrid id="gpSelectButtons" columns="3"  >
                                     <p:commandButton id="btnAdd" value="Add" action="#{membershipSchemeController.prepareAdd()}" styleClass="buttons" >
-                                        <f:ajax event="click" render="btnAdd  btnDelete btnSave lstSelect gpDetail detailFocus" execute="@this" >
+                                        <f:ajax event="click" render="btnAdd  btnDelete btnSave lstSelect :#{p:component('gpDetail')} detailFocus" execute="@this" >
                                         </f:ajax>
                                     </p:commandButton>
                                     
                                     <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{membershipSchemeController.delete()}"  value="Delete"  >
+                                        return false;" action="#{membershipSchemeController.delete()}"  value="Delete" ajax="false"  >
                                     </p:commandButton>
                                 </h:panelGrid>
                             </p:panel>
@@ -51,9 +51,7 @@
                                     <h:inputText autocomplete="off" id="txtName" value="#{membershipSchemeController.current.name}"  ></h:inputText>
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
-                                    <p:commandButton id="btnSave" value="Save" action="#{membershipSchemeController.saveSelected()}" styleClass="buttons">
-                                        <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" event="click">
-                                        </f:ajax>
+                                    <p:commandButton id="btnSave" value="Save" action="#{membershipSchemeController.saveSelected()}" styleClass="buttons" ajax="false">
                                     </p:commandButton>
                                     <p:defaultCommand target="btnSave"/>
                                 </h:panelGrid>
