--- a/src/main/webapp/memberShip/membership_scheme_payment_method_allowed.xhtml
+++ b/src/main/webapp/memberShip/membership_scheme_payment_method_allowed.xhtml
@@ -21,14 +21,15 @@
                 <p:panel header="Manage Discount Scheme Payment Method" >
                     <h:panelGrid id ="gpVeda" columns="2" >
 
-                        <h:panelGrid id="gpSelect" columns="1"  >
-                            <p:panel >
+                        <p:panel>
+                            <h:panelGrid id="gpSelect" columns="2"  >
                                 <h:outputText  value="Discount Scheme" />
-                                <h:selectOneListbox  value="#{paymentSchemeController.membershipScheme}" size="1" >
+                                <p:selectOneMenu  value="#{paymentSchemeController.membershipScheme}" >
                                     <f:selectItem itemLabel="Select Member Ship Scheme"/>
                                     <f:selectItems value="#{membershipSchemeController.items}"/>
                                     <f:ajax event="change" render="@all" execute="@this" listener="#{paymentSchemeController.createAllowedPaymentMethods()}" />                                        
-                                </h:selectOneListbox>
+                                </p:selectOneMenu>
+                                <h:outputText  value="Allowed Methords" />
                                 <h:panelGrid id="gpSelectText" >
                                     <h:selectOneListbox  id="lstSelect"   size="10" value="#{paymentSchemeController.currentAllowedPaymentMethod}" style="min-width: 223px">
                                         <f:selectItems  value="#{paymentSchemeController.allowedPaymentMethods}" 
@@ -37,37 +38,38 @@
                                         </f:ajax>
                                     </h:selectOneListbox>
                                 </h:panelGrid>
-                                <h:panelGrid id="gpSelectButtons" columns="3"  >
 
-                                    <p:commandButton ajax="false" id="btnAdd" value="Add" 
-                                                    action="#{paymentSchemeController.prepareAdd()}" 
-                                                     styleClass="buttons" />                                       
+                            </h:panelGrid  >
+                            <h:panelGrid id="gpSelectButtons" columns="3"  >
+
+                                <p:commandButton ajax="false" id="btnAdd" value="Add" 
+                                                 action="#{paymentSchemeController.prepareAdd()}" 
+                                                 styleClass="buttons" />                                       
 
 
-                                    <p:commandButton ajax="false" id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                <p:commandButton ajax="false" id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
                                                 return false;" action="#{paymentSchemeController.delete()}"  value="Delete"  >
-                                    </p:commandButton>
+                                </p:commandButton>
 
-                                    <p:commandButton ajax="false" value="Clear"
-                                                    action="#{paymentSchemeController.recreateModel}"/>
+                                <p:commandButton ajax="false" value="Clear"
+                                                 action="#{paymentSchemeController.recreateModel}"/>
 
-                                </h:panelGrid>
-                            </p:panel>
-                        </h:panelGrid  >
+                            </h:panelGrid>
+                        </p:panel>
 
                         <p:panel>
                             <h:panelGrid id="gpDetail" columns="1">
                                 <h:panelGrid id="gpDetailText" columns="2">                                  
                                     <h:outputText value="Payment Method" ></h:outputText>
-                                    <h:selectOneListbox value="#{paymentSchemeController.currentAllowedPaymentMethod.paymentMethod}" size="1" >
+                                    <p:selectOneMenu value="#{paymentSchemeController.currentAllowedPaymentMethod.paymentMethod}" >
                                         <f:selectItem itemLabel="Select Payment Method"/>
                                         <f:selectItems value="#{enumController.paymentMethods}"/>
-                                    </h:selectOneListbox>
+                                    </p:selectOneMenu>
 
                                     <h:commandButton id="btnSave"  value="Add" action="#{paymentSchemeController.saveSelectedAllowedPaymentMethod()}" styleClass="buttons">                                        
                                     </h:commandButton>
                                 </h:panelGrid>
-                                
+
                             </h:panelGrid>
                         </p:panel>
                     </h:panelGrid>
