--- a/src/main/webapp/reportInstitution/report_opd_service_summery_by_category.xhtml
+++ b/src/main/webapp/reportInstitution/report_opd_service_summery_by_category.xhtml
@@ -30,6 +30,8 @@
                             <p:column>#{pta.name}</p:column>
                             <p:column>#{pta.parentCategory}</p:column>                                        
                         </p:autoComplete>
+                        <h:outputText value="Only Credit" ></h:outputText>
+                        <p:selectBooleanCheckbox value="#{serviceSummery.credit}" />
                     </h:panelGrid>
                     <h:panelGrid columns="5" styleClass="noPrintButton">
                         <p:spacer width="190" height="1"/>
