Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/opd_bill_package.xhtml
+++ b/src/main/webapp/opd_bill_package.xhtml
@@ -71,7 +71,7 @@
                                                                 value="#{billPackageController.searchedPatient}" 
                                                                 completeMethod="#{patientController.completePatient}" 
                                                                 var="apt" itemLabel="#{apt.person.name}" 
-                                                                itemValue="#{apt}" size="30"  style="width: 400px;" required="true" requiredMessage="Please select the Patient">
+                                                                itemValue="#{apt}" size="30"  style="width: 400px;" >
                                                     <f:ajax event="itemSelect" execute="acPt" render="panSearch" />
                                                 </p:autoComplete>   
 
