--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -36,6 +36,8 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All Channel Bills" action="/channel/channel_report_all_bills"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All Channel Bill With Vat" action="/channel/channel_report_all_bills_for_vat" style="color: red;"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Area Wise Count Report" action="/channel/channel_report_area_with_count" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Card Summery Report" action="/channel/channel_card_summery_report" actionListener="#{channelReportController.clearAll}"/>
+
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
@@ -74,7 +76,7 @@
                                 </p:panel>
                             </h:panelGrid>
                             <h:panelGrid columns="1">
-                                <p:panel header="Consutant Reports" style="width: 400px;margin: auto;"  toggleable="true">  
+                                <p:panel header="Consultant Reports" style="width: 400px;margin: auto;"  toggleable="true">  
                                     <h:panelGrid columns="1">
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Leave Report()" action="/channel/channel_report_doctor_leave"/>  
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Doctor Wise Channel Appoinment Total And Count(12)" action="/channel/channel_report_consultant_month_count"/>
@@ -140,6 +142,7 @@
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
+                            
 
                         </h:panelGrid>
                     </p:panel>
