Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_adjustment_retail_sale_rate.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_adjustment_retail_sale_rate.xhtml
@@ -18,7 +18,7 @@
                         <h:panelGrid columns="2">
                             <p:panelGrid columns="2" >
                                 <h:outputLabel value="Item" ></h:outputLabel>
-                                <p:autoComplete  forceSelection="true"  id="acStock" value="#{pharmacyAdjustmentController.stock}" converter="stockCon" completeMethod="#{pharmacyAdjustmentController.completeAvailableStocks}" var="i" itemLabel="#{i.itemBatch.item.name}" itemValue="#{i}" >
+                                <p:autoComplete  forceSelection="true"  id="acStock" value="#{pharmacyAdjustmentController.stock}" converter="stockCon" completeMethod="#{pharmacyController.completeAllStocks}" var="i" itemLabel="#{i.itemBatch.item.name}" itemValue="#{i}" >
                                     <p:column headerText="Item">
                                         <h:outputLabel value="#{i.itemBatch.item.name}" ></h:outputLabel>
                                     </p:column>
