--- a/src/main/webapp/reportIncome/report_income.xhtml
+++ b/src/main/webapp/reportIncome/report_income.xhtml
@@ -22,6 +22,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="By Institution" action="report_income_with_credit_by_institution"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="By Department (Reported)" action="report_income_with_credit_by_department"/>                                
                                         <p:commandButton styleClass="linkButton" ajax="false" value="By Department (Billed)" action="report_income_with_credit_by_department_billed"/>                                
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="By Department (Billed)(Bill Item)" action="report_income_with_credit_by_department_billed_bill_item"/>                                
                                         <p:commandButton styleClass="linkButton" ajax="false" value="By Institution Bill Count" action="report_income_with_credit_by_institution_for_build_bills"/>                                
                                     </h:panelGrid>
                                 </p:panel>
