--- a/src/main/webapp/reportIncome/report_income_with_credit_by_department_billed_bill_item.xhtml
+++ b/src/main/webapp/reportIncome/report_income_with_credit_by_department_billed_bill_item.xhtml
@@ -34,18 +34,13 @@
                                         itemLabel="#{dept.name}" forceSelection="true" rendered="true"
                                         requiredMessage="You must select a department" >
                         </p:autoComplete>
-                        <h:outputLabel  value="Only OPD Income" />
-                        <p:selectOneRadio value="#{commonReport1.radio}" >
-                            <f:selectItem itemLabel="All" itemValue="1" />
-                            <f:selectItem itemLabel="Only OPD" itemValue="2" />
-                            <f:selectItem itemLabel="Only Channel" itemValue="3" />
-                            <f:selectItem itemLabel="Only Pharmacy" itemValue="4" />
-                        </p:selectOneRadio>
+<!--                        <h:outputLabel  value="Only OPD Income" />
+                        <p:selectBooleanCheckbox value="#{commonReport1.onlyOPD}" />-->
                     </h:panelGrid>
                     <h:panelGrid columns="5">
                         <p:spacer width="70" height="1"/>
                         <p:commandButton id="btnRefresh" styleClass="noPrintButton" value="Refresh" ajax="false" 
-                                         action="#{commonReport1.createWithCreditbyDepartmentBilled()}">
+                                         action="#{commonReport1.createWithCreditbyDepartmentBilledBillItem()}">
                         </p:commandButton>
                         <p:defaultCommand target="btnRefresh"/>
 
@@ -57,9 +52,7 @@
                         </p:commandButton>
                     </h:panelGrid>
                 </f:facet>
-                <p:dataTable id="tbl" value="#{commonReport1.biledBills}" var="b"  
-                             rowStyleClass="#{b.billClass eq 'class com.divudi.entity.RefundBill' ? 'redText' :b.billClass eq 'class com.divudi.entity.CancelledBill' ? 'greenText' :''}"
-                             >
+                <p:dataTable id="tbl" value="#{commonReport1.billItems}" var="bi" >
 
                     <f:facet name="header">
                         <h:outputLabel value="Income Report With Credit By Department :"/>
@@ -78,16 +71,14 @@
                         <f:facet name="header">
                             <h:outputLabel value="BillId"/>
                         </f:facet>
-                        <p:outputLabel value="#{b.insId}" rendered="#{b.billClass eq 'class com.divudi.entity.BilledBill'}" />
-
-                        <p:outputLabel value="#{b.billedBill.insId}" rendered="#{b.billClass ne 'class com.divudi.entity.BilledBill'}" />
+                        <p:outputLabel value="#{bi.bill.insId}" />
                     </p:column>
 
                     <p:column headerText="Date and Time" >
                         <f:facet name="header">
                             <h:outputLabel value="Date and Time"/>
                         </f:facet>
-                        <p:outputLabel value="#{b.createdAt}" >
+                        <p:outputLabel value="#{bi.bill.createdAt}" >
                             <f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss a"/>
                         </p:outputLabel>
                     </p:column>
@@ -96,23 +87,35 @@
                         <f:facet name="header">
                             <h:outputLabel value="Name"/>
                         </f:facet>
-                        <h:outputLabel value="#{b.patient.person.name}" ></h:outputLabel>
+                        <h:outputLabel value="#{bi.bill.patient.person.name}" ></h:outputLabel>
                     </p:column>
-                    <p:column headerText="Department" >
+                    <p:column headerText="Item Name" >
                         <f:facet name="header">
-                            <h:outputLabel value="Department"/>
+                            <h:outputLabel value="Item Name"/>
                         </f:facet>
-                        <h:outputLabel value="#{b.toDepartment.name}" ></h:outputLabel>
+                        <h:outputLabel value="#{bi.item.name}" ></h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Item Cat." >
+                        <f:facet name="header">
+                            <h:outputLabel value="Item Cat."/>
+                        </f:facet>
+                        <h:outputLabel value="#{bi.item.category.name}" ></h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Dep. Name" >
+                        <f:facet name="header">
+                            <h:outputLabel value="Dep. Name"/>
+                        </f:facet>
+                        <h:outputLabel value="#{bi.bill.toDepartment.name}" ></h:outputLabel>
                     </p:column>
                     <p:column headerText="Hospital Fee" style="text-align: right;">
                         <f:facet name="header">
                             <h:outputLabel value="Hospital Fee"/>
                         </f:facet>
-                        <h:outputLabel value="#{b.total - b.staffFee}" >
+                        <h:outputLabel value="#{bi.hospitalFee}" >
                             <f:convertNumber pattern="#,##0.00" />
                         </h:outputLabel>
                         <f:facet name="footer">
-                            <h:outputLabel value="#{commonReport1.total-commonReport1.staffTotal}" >
+                            <h:outputLabel value="#{commonReport1.total}" >
                                 <f:convertNumber pattern="#,##0.00" />
                             </h:outputLabel>
                         </f:facet>
@@ -121,7 +124,7 @@
                         <f:facet name="header">
                             <h:outputLabel value="Dis."/>
                         </f:facet>
-                        <h:outputLabel value="#{b.discount}" >
+                        <h:outputLabel value="#{bi.discount}" >
                             <f:convertNumber pattern="#,##0.00" />
                         </h:outputLabel>
                         <f:facet name="footer">
@@ -134,7 +137,7 @@
                         <f:facet name="header">
                             <h:outputLabel value="Prof. Fee"/>
                         </f:facet>
-                        <h:outputLabel value="#{b.staffFee}" >
+                        <h:outputLabel value="#{bi.staffFee}" >
                             <f:convertNumber pattern="#,##0.00" />
                         </h:outputLabel>
                         <f:facet name="footer">
@@ -147,7 +150,7 @@
                         <f:facet name="header">
                             <h:outputLabel value="Vat"/>
                         </f:facet>
-                        <h:outputLabel value="#{b.vat}" >
+                        <h:outputLabel value="#{bi.vat}" >
                             <f:convertNumber pattern="#,##0.00" />
                         </h:outputLabel>
                         <f:facet name="footer">
@@ -160,7 +163,7 @@
                         <f:facet name="header">
                             <h:outputLabel value="Net Total"/>
                         </f:facet>
-                        <h:outputLabel value="#{b.netTotal+b.vat}" >
+                        <h:outputLabel value="#{bi.netValue+bi.vat}" >
                             <f:convertNumber pattern="#,##0.00" />
                         </h:outputLabel>
                         <f:facet name="footer">
