Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_doctor_view_today_all_1.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view_today_all_1.xhtml
@@ -99,6 +99,26 @@
                                 </p:outputLabel>
                             </f:facet>
                         </p:column>
+                        <p:column headerText="Vat" styleClass="numberCol">
+                            <p:outputLabel value="#{(bs.billFee+bs.billCanncelFee+bs.refundFee)*0.15}" >
+                                <f:convertNumber pattern="##,###,##0.00" />
+                            </p:outputLabel>
+                            <f:facet name="footer">
+                                <p:outputLabel value="#{(channelReportController.total)*0.15}" style="float: right;">
+                                    <f:convertNumber pattern="##,###,##0.00" />
+                                </p:outputLabel>
+                            </f:facet>
+                        </p:column>
+                        <p:column headerText="Vat Plus Total" styleClass="numberCol">
+                            <p:outputLabel value="#{(bs.billFee+bs.billCanncelFee+bs.refundFee)*1.15}" >
+                                <f:convertNumber pattern="##,###,##0.00" />
+                            </p:outputLabel>
+                            <f:facet name="footer">
+                                <p:outputLabel value="#{(channelReportController.total)*1.15}" style="float: right;">
+                                    <f:convertNumber pattern="##,###,##0.00" />
+                                </p:outputLabel>
+                            </f:facet>
+                        </p:column>
                     </p:dataTable>
                 </p:panel>
             </p:panel>
